# azedit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/release-notes/: v1.5.0.md  v1.5.9.md
prompts/: gemini-code-1782045921230.md  gemini-code-1782045977375.ts  gemini-code-1782046017697.ts  gemini-code-latest.md
src/: app.css  app.tsx  main.tsx
src-tauri/: Cargo.toml  azedit.desktop  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: index.ts
src/components/chrome/: breadcrumb.tsx  index.ts  logo.tsx  status-bar.tsx  (+2 more)
src/hooks/: index.ts  use-file-ops.ts  use-file-session.ts  use-file-watcher.ts  use-notifications.ts  use-overlays.ts  use-persisted-state.ts  use-scroll-memory.ts  use-selection-sync-text.ts  use-shortcuts.ts  use-sync-scroll.ts  use-update-flow.ts
src/lib/: bundle.ts  commands.ts  context-bundle.ts  demo.ts  files.ts  i18n.tsx  index.ts  latex-macros.ts  markdown.ts  math.ts  mermaid.ts  pdf-export.ts  plantuml.ts  release-notes.ts  storage.ts  theme.ts  window-drag.ts  writing-display.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  zh.json
src/styles/: breadcrumb.css  globals.css  help.css  menu.css  palette.css  panes.css  prose.css  sidebar.css  statusbar.css  titlebar.css  tokens.css
tests/: context-bundle.test.ts  files.test.ts  pdf-export.test.ts  release-notes.test.ts
(+52 files in other folders)
