[package]
name = "azedit"
version = "0.1.0"
description = "AZEdit — éditeur de texte orienté enseignement/CPGE"
authors = []
edition = "2021"

[lib]
name = "azedit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
